--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy to Oracle VPS
+name: Deploy LearnMeet to Oracle VPS
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14'
+        node-version: '22'
 
     - name: Install dependencies
       run: npm install
@@ -63,15 +63,15 @@ jobs:
       with:
         name: build-artifacts
 
-    - name: Deploy to Oracle VPS
+    - name: Deploy LearnMeet to Oracle VPS
       uses: appleboy/ssh-action@v0.1.4
       with:
         host: ${{ secrets.VPS_IP }}
         username: ${{ secrets.VPS_USERNAME }}
         key: ${{ secrets.VPS_SSH_KEY }}
         script: |
-          cd vscode-portfolio
-          git pull origin main
+          cd LearnMeet
+          git pull origin master
           touch .env
           echo NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }} >> .env
           echo CLERK_SECRET_KEY=${{ secrets.CLERK_SECRET_KEY }} >> .env
@@ -81,7 +81,6 @@ jobs:
           echo NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=${{ vars.NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL }} >> .env
           echo NEXT_PUBLIC_STREAM_API_KEY=${{ secrets.NEXT_PUBLIC_STREAM_API_KEY }} >> .env
           echo STREAM_SECRET_KEY=${{ secrets.STREAM_SECRET_KEY }} >> .env
-          cat .env
           npm install
 
   restart:
@@ -96,7 +95,7 @@ jobs:
         username: ${{ secrets.VPS_USERNAME }}
         key: ${{ secrets.VPS_SSH_KEY }}
         script: |
-          cd vscode-portfolio
+          cd LearnMeet
           touch .env
           echo NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }} >> .env
           echo CLERK_SECRET_KEY=${{ secrets.CLERK_SECRET_KEY }} >> .env
