--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,21 +47,21 @@ jobs:
         STREAM_SECRET_KEY: ${{ secrets.STREAM_SECRET_KEY }}
       run: npm run build
 
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: build-artifacts
-        path: .
+    # - name: Upload build artifacts
+    #   uses: actions/upload-artifact@v2
+    #   with:
+    #     name: build-artifacts
+    #     path: .
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
 
     steps:
-    - name: Download build artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: build-artifacts
+    # - name: Download build artifacts
+    #   uses: actions/download-artifact@v2
+    #   with:
+    #     name: build-artifacts
 
     - name: Deploy LearnMeet to Oracle VPS
       uses: appleboy/ssh-action@v0.1.4
